<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context="com.team15.lower.wellnessbaby.MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/wellness_baby" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="Wellness Baby"
        android:textColor="@color/colorAccent"
        android:textSize="30dp" />

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="400dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/health_btn"
            android:layout_width="550dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/first_btn"
            android:text="@string/myanmar_health"
            android:textSize="30sp" />

        <Button
            android:id="@+id/sec_Btn"
            android:layout_width="275dp"
            android:layout_height="120dp"
            android:layout_below="@id/health_btn"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/sec_btn"
            android:text="@string/myanmar_nutrition"
            android:textSize="30sp" />

        <Button
            android:id="@+id/right_btn"
            android:layout_width="275dp"
            android:layout_height="120dp"
            android:layout_below="@id/health_btn"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/sec_Btn"
            android:background="@drawable/third_btn"
            android:text="@string/myanmar_timeline"
            android:textSize="30sp" />

        <Button
            android:id="@+id/thrid_Btn"
            android:layout_width="275dp"
            android:layout_height="120dp"
            android:layout_below="@id/sec_Btn"
            android:layout_marginTop="10dp"
            android:background="@drawable/four_btn"
            android:text="@string/myanmar_important"
            android:textSize="30sp" />

        <Button
            android:id="@+id/four_Btn"
            android:layout_width="275dp"
            android:layout_height="120dp"
            android:layout_alignLeft="@id/right_btn"
            android:layout_alignStart="@id/right_btn"
            android:layout_below="@id/right_btn"
            android:layout_marginTop="10dp"
            android:background="@drawable/five_btn"
            android:text="@string/myanmar_entertainment"
            android:textSize="30sp" />

    </RelativeLayout>


    <ImageView
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/help"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
