<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/age_des"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/women"
        android:text="Afsadkfsdjklf"
        android:textAlignment="center"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disea"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_weight="0.2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/count"
            android:textAlignment="center"
            android:layout_weight="0.7"
            android:textSize="16dp"/>

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/vaccine"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_weight="0.16" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lin"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/disease_description"
            android:layout_width="182dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="diseasdfdfsddsfsdfse"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold|italic" />


        <TextView
            android:id="@+id/note"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:background="#fff"
            android:text="Note"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/medicine_description"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="0.17"
            android:text="diseasertfgdgdgfgfgfg"
            android:textAlignment="textEnd"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            />

    </LinearLayout>

</LinearLayout>